--- a/contact.html
+++ b/contact.html
@@ -307,7 +307,7 @@
    <script>
     function lineLogin() {
       // 👇 這裡填入你的 LINE Channel ID
-      const LINE_CHANNEL_ID = 'YOUR_CHANNEL_ID_HERE';
+      const LINE_CHANNEL_ID = '2008295802';
       
       const CALLBACK_URL = 'https://Mochi1126.github.io/bichon-website/callback.html';
       const state = generateRandomString(32);
